--- a/forgot-password.html
+++ b/forgot-password.html
@@ -2,31 +2,27 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>إعادة تعيين كلمة المرور - CourseHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>استعادة كلمة المرور - CourseHub</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
+  <div id="header-placeholder"></div>
 
-<div id="header-placeholder"></div>
+  <main>
+    <h2>استعادة كلمة المرور</h2>
+    <form id="forgot-password-form">
+      <label for="email">البريد الإلكتروني</label>
+      <input type="email" id="email" name="email" required>
+      <button type="submit">إرسال رابط الاستعادة</button>
+    </form>
+  </main>
 
-<main class="login-page container">
-  <h2>إعادة تعيين كلمة المرور</h2>
+  <div id="footer-placeholder"></div>
 
-  <form id="forgotForm">
-    <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required>
-    <button type="submit">إرسال رابط إعادة التعيين</button>
-  </form>
-
-  <p class="login-links">
-    <a href="login.html">تسجيل الدخول</a>
-  </p>
-</main>
-
-<div id="footer-placeholder"></div>
-
-<script type="module" src="js/auth.js"></script>
-<script src="js/main.js" defer></script>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
