--- a/certificates.html
+++ b/certificates.html
@@ -3,15 +3,14 @@
 <head>
 
 
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
+<link rel="stylesheet" href="css/header.css">
   
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الشهادات - CourseHub</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<script src="main.js" defer></script>
+<script src="js/main.js" defer></script>
 </head>
 <body>
 
@@ -22,30 +21,30 @@
   <h2>الشهادات الخاصة بك</h2>
   <div class="courses-grid">
     <div class="card">
-      <img src="images/certificate.jpg" alt="Certificate">
+      <img src="/public/assets/images/certificate.jpg" alt="Certificate">
       <div class="card-content">
         <h3>شهادة تطوير الويب</h3>
         <p>تم إكمال الدورة بنجاح.</p>
-        <a href="images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
+        <a href="/public/assets/images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
       </div>
     </div>
     <div class="card">
-      <img src="images/certificate.jpg" alt="Certificate">
+      <img src="/public/assets/images/certificate.jpg" alt="Certificate">
       <div class="card-content">
         <h3>شهادة الذكاء الاصطناعي</h3>
         <p>تم إكمال الدورة بنجاح.</p>
-        <a href="images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
+        <a href="/public/assets/images/certificate.jpg" class="btn" download>تحميل الشهادة</a>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Footer سيتم تحميله تلقائياً عبر main.js -->
+<link rel="stylesheet" href="css/footer.css">
 <div id="footer-placeholder"></div>
 
 <script>
- <script src="header.js"></script>
-  <script src="footer.js"></script>
+
+
 
 </body>
 </html>
