--- a/forgot-password.html
+++ b/forgot-password.html
@@ -2,31 +2,34 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>إعادة تعيين كلمة المرور - CourseHub</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
-<div id="header-placeholder"></div>
+  <!-- Placeholder للهيدر -->
+  <div id="header-placeholder"></div>
 
-<main class="login-page container">
-  <h2>إعادة تعيين كلمة المرور</h2>
+  <main class="login-page container">
+    <h2>إعادة تعيين كلمة المرور</h2>
 
-  <form id="forgotForm">
-    <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required>
-    <button type="submit">إرسال رابط إعادة التعيين</button>
-  </form>
+    <form id="forgotForm">
+      <input id="forgotEmail" type="email" placeholder="البريد الإلكتروني" required>
+      <button type="submit">إرسال رابط إعادة التعيين</button>
+    </form>
 
-  <p class="login-links">
-    <a href="login.html">تسجيل الدخول</a>
-  </p>
-</main>
+    <p class="login-links">
+      <a href="login.html">تسجيل الدخول</a>
+    </p>
+  </main>
 
-<div id="footer-placeholder"></div>
+  <!-- Placeholder للفوتر -->
+  <div id="footer-placeholder"></div>
 
-<script type="module" src="js/auth.js"></script>
-<script src="js/main.js" defer></script>
-
+  <!-- Scripts -->
+  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
