--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Main JS (تحميل الهيدر والفوتر وإدارة حالة المستخدم) -->
-  <script src="js/main.js" defer></script>
+  <script type="module" src="js/main.js" defer></script>
 </head>
 
 <body>
