--- a/login.html
+++ b/login.html
@@ -10,13 +10,13 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/login.css">
 
-  <!-- تحميل الهيدر والفوتر -->
-  <script src="js/main.js" defer></script>
+  <!-- تحميل الهيدر والفوتر + حالة المستخدم -->
+  <script type="module" src="js/main.js" defer></script>
 </head>
 
 <body>
 
-  <!-- Header ديناميكي -->
+  <!-- Header -->
   <div id="header-placeholder"></div>
 
   <main class="login-page container">
@@ -38,10 +38,11 @@
     </button>
   </main>
 
-  <!-- Footer ديناميكي -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase + Auth -->
+  <!-- Firebase Auth -->
   <script type="module" src="js/auth.js"></script>
+
 </body>
 </html>
