--- a/my-courses.html
+++ b/my-courses.html
@@ -23,8 +23,10 @@
     }
   </style>
 </head>
+
 <body>
-  <!-- Header Placeholder -->
+
+  <!-- Header -->
   <div id="header-placeholder"></div>
 
   <!-- Main Content -->
@@ -44,11 +46,12 @@
     <div id="favorites" class="tab-content"></div>
   </main>
 
-  <!-- Footer Placeholder -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
   <!-- JS -->
-  <script src="js/main.js" defer></script>
+  <script type="module" src="js/main.js"></script>
   <script type="module" src="js/my-courses.js"></script>
+
 </body>
 </html>
