--- a/course-detail.html
+++ b/course-detail.html
@@ -53,12 +53,13 @@
     import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyCagdZU_eAHebBGCmG5W4FFTcDZIH4wOp0",
-      authDomain: "coursehub-23ed2.firebaseapp.com",
-      projectId: "coursehub-23ed2",
-      storageBucket: "coursehub-23ed2.appspot.com",
-      messagingSenderId: "367073521017",
-      appId: "1:367073521017:web:67f5fd3be4c6407247d3a8"
+      apiKey: "AIzaSyDV9DaGphy6cyNt1UEITkQDlTim1w8vm8M",
+  authDomain: "coursehub-23ed2.firebaseapp.com",
+  projectId: "coursehub-23ed2",
+  storageBucket: "coursehub-23ed2.firebasestorage.app",
+  messagingSenderId: "367073521017",
+  appId: "1:367073521017:web:67f5fd3be4c6407247d3a8",
+  measurementId: "G-NJ6E39V9NW"
     };
 
     const app = initializeApp(firebaseConfig);
