--- a/courses.html
+++ b/courses.html
@@ -26,6 +26,7 @@
   </style>
 </head>
 <body>
+  <!-- Header Placeholder -->
   <div id="header-placeholder"></div>
 
   <section class="container">
@@ -39,6 +40,7 @@
     <div class="courses-grid" id="coursesGrid"></div>
   </section>
 
+  <!-- Footer Placeholder -->
   <div id="footer-placeholder"></div>
 
   <!-- Firebase + Courses Script -->
@@ -47,13 +49,13 @@
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.16.0/firebase-firestore.js";
 
     const firebaseConfig = {
- apiKey: "AIzaSyDTW6hv7_PqPUb8NytYXVkkrVwwE9ACY0I",
-  authDomain: "coursehub-23ed2.firebaseapp.com",
-  projectId: "coursehub-23ed2",
-  storageBucket: "coursehub-23ed2.firebasestorage.app",
-  messagingSenderId: "367073521017",
-  appId: "1:367073521017:web:67f5fd3be4c6407247d3a8",
-  measurementId: "G-NJ6E39V9NW"
+      apiKey: "AIzaSyDTW6hv7_PqPUb8NytYXVkkrVwwE9ACY0I",
+      authDomain: "coursehub-23ed2.firebaseapp.com",
+      projectId: "coursehub-23ed2",
+      storageBucket: "coursehub-23ed2.firebasestorage.app",
+      messagingSenderId: "367073521017",
+      appId: "1:367073521017:web:67f5fd3be4c6407247d3a8",
+      measurementId: "G-NJ6E39V9NW"
     };
 
     const app = initializeApp(firebaseConfig);
