--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/login.css">
 
   <!-- تحميل الهيدر والفوتر + حالة المستخدم -->
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
   <div id="footer-placeholder"></div>
 
   <!-- Firebase Auth -->
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="./js/auth.js"></script>
 
 </body>
 </html>
