--- a/login.html
+++ b/login.html
@@ -43,7 +43,10 @@
   <div id="footer-placeholder"></div>
 
   <!-- Firebase Auth -->
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/auth.js" defer></script>
+
+  <!-- تحميل header.js لفحص وإظهار اسم المستخدم بعد تحميل الهيدر -->
+  <script type="module" src="js/header.js" defer></script>
 
 </body>
 </html>
