--- a/login.html
+++ b/login.html
@@ -11,13 +11,13 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/login.css">
 
-  <!-- تحميل الهيدر والفوتر + حالة المستخدم -->
+  <!-- CSS وميزات عامة -->
   <script type="module" src="js/main.js" defer></script>
 </head>
 
 <body>
 
-  <!-- Header -->
+  <!-- Header والفوتر سيتم تحميلهما ديناميكيًا -->
   <div id="header-placeholder"></div>
 
   <main class="login-page container">
@@ -39,13 +39,11 @@
     </button>
   </main>
 
-  <!-- Footer -->
   <div id="footer-placeholder"></div>
 
   <!-- Firebase Auth -->
   <script type="module" src="js/auth.js" defer></script>
-
-  <!-- تحميل header.js لفحص وإظهار اسم المستخدم بعد تحميل الهيدر -->
+  <!-- Header loader + user state -->
   <script type="module" src="js/header.js" defer></script>
 
 </body>
