--- a/admin/add-course.html
+++ b/admin/add-course.html
@@ -3,37 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إضافة دورة جديدة - لوحة التحكم</title>
+
+  <title>إضافة دورة جديدة - لوحة التحكم | CourseHub</title>
+
+  <!-- CSS الأساسي -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
+
 <body>
+
+  <!-- Header (تحميل ديناميكي) -->
   <div id="header-placeholder"></div>
 
-  <main>
+  <!-- المحتوى -->
+  <main class="container">
     <h2>إضافة دورة جديدة</h2>
-    <form id="add-course-form">
-      <label for="title">عنوان الدورة</label>
-      <input type="text" id="title" name="title" required>
-      <label for="description">وصف الدورة</label>
-      <textarea id="description" name="description" required></textarea>
-      <button type="submit">إضافة</button>
+
+    <form id="add-course-form" class="admin-form">
+      <div class="form-group">
+        <label for="title">عنوان الدورة</label>
+        <input type="text" id="title" name="title" required>
+      </div>
+
+      <div class="form-group">
+        <label for="description">وصف الدورة</label>
+        <textarea id="description" name="description" rows="5" required></textarea>
+      </div>
+
+      <button type="submit" class="btn-primary">إضافة الدورة</button>
     </form>
   </main>
 
+  <!-- Footer (تحميل ديناميكي) -->
   <div id="footer-placeholder"></div>
 
-  <script src="../js/main.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const user = JSON.parse(localStorage.getItem("coursehub_user"));
-      if (!user || user.role !== "admin") {
-        window.location.href = "../login.html";
-      }
-    });
-  </script>
-  <script src="../js/add-course.js"></script>
+  <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS) -->
+  <script type="module" src="../js/main.js" defer></script>
+
+  <!-- Header logic (حالة المستخدم + زر الأدمن) -->
+  <script type="module" src="../js/header.js" defer></script>
+
+  <!-- حماية صفحة الأدمن (موحدة) -->
+  <script type="module" src="../js/auth-guard.js" defer></script>
+
+  <!-- منطق إضافة الدورة -->
+  <script type="module" src="../js/add-course.js" defer></script>
+
 </body>
 </html>
