--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -3,31 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إدارة المستخدمين - لوحة التحكم</title>
+
+  <title>إدارة المستخدمين - لوحة التحكم | CourseHub</title>
+
+  <!-- CSS الأساسي -->
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
+
 <body>
+
+  <!-- Header (تحميل ديناميكي) -->
   <div id="header-placeholder"></div>
 
-  <main>
+  <!-- المحتوى -->
+  <main class="container">
     <h2>إدارة المستخدمين</h2>
-    <div id="users-list"></div>
+
+    <div id="users-list" class="admin-users-list">
+      <!-- سيتم تعبئة المستخدمين ديناميكيًا -->
+    </div>
   </main>
 
+  <!-- Footer (تحميل ديناميكي) -->
   <div id="footer-placeholder"></div>
 
-  <script src="../js/main.js"></script>
-  <script>
-    // حماية صفحة المسؤول
-    document.addEventListener("DOMContentLoaded", () => {
-      const user = JSON.parse(localStorage.getItem("coursehub_user"));
-      if (!user || user.role !== "admin") {
-        window.location.href = "../login.html";
-      }
-    });
-  </script>
+  <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
+  <script type="module" src="../js/main.js" defer></script>
+
+  <!-- منطق الهيدر (حالة المستخدم + زر الأدمن) -->
+  <script type="module" src="../js/header.js" defer></script>
+
+  <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
+  <script type="module" src="../js/auth-guard.js" defer></script>
+
+  <!-- منطق إدارة المستخدمين -->
+  <script type="module" src="../js/manage-users.js" defer></script>
+
 </body>
 </html>
