--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -30,6 +30,9 @@
   <!-- Footer (تحميل ديناميكي) -->
   <div id="footer-placeholder"></div>
 
+<script src="manage-users.js"></script>
+
+  
   <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
   <script type="module" src="../js/main.js" defer></script>
 
@@ -44,3 +47,4 @@
 
 </body>
 </html>
+
