--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -7,10 +7,10 @@
   <title>لوحة التحكم - CourseHub</title>
 
   <!-- CSS الأساسي -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/header.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../dashboard.css">
 </head>
 
 <body>
@@ -31,16 +31,16 @@
   <div id="footer-placeholder"></div>
 
   <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS) -->
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="../js/main.js" defer></script>
 
   <!-- Header logic (إظهار المستخدم + زر الأدمن) -->
-  <script type="module" src="js/header.js" defer></script>
+  <script type="module" src="../js/header.js" defer></script>
 
   <!-- حماية صفحة الأدمن (الأهم) -->
-  <script type="module" src="js/auth-guard.js" defer></script>
+  <script type="module" src="../js/auth-guard.js" defer></script>
 
   <!-- منطق لوحة التحكم -->
-  <script type="module" src="js/dashboard.js" defer></script>
+  <script type="module" src="../js/dashboard.js" defer></script>
 
 </body>
 </html>
