--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -8,7 +8,7 @@
 
   <!-- CSS الأساسي -->
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../../css/header.css">
+  <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../dashboard.css">
 </head>
