--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -7,9 +7,9 @@
   <title>إدارة المستخدمين - لوحة التحكم | CourseHub</title>
 
   <!-- CSS الأساسي -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
 
@@ -34,17 +34,18 @@
 
   
   <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
-  <script type="module" src="../js/main.js" defer></script>
+  <script type="module" src="js/main.js" defer></script>
 
   <!-- منطق الهيدر (حالة المستخدم + زر الأدمن) -->
-  <script type="module" src="../js/header.js" defer></script>
+  <script type="module" src="js/header.js" defer></script>
 
   <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
-  <script type="module" src="../js/auth-guard.js" defer></script>
+  <script type="module" src="js/auth-guard.js" defer></script>
 
   <!-- منطق إدارة المستخدمين -->
-  <script type="module" src="../js/manage-users.js" defer></script>
+  <script type="module" src="js/manage-users.js" defer></script>
 
 </body>
 </html>
+
 
