--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -7,10 +7,10 @@
   <title>إدارة المستخدمين - لوحة التحكم | CourseHub</title>
 
   <!-- CSS الأساسي -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="/dashboard.css">
 </head>
 
 <body>
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
