--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -43,10 +43,11 @@
   <script type="module" src="./js/auth-guard.js" defer></script>
 
   <!-- منطق إدارة المستخدمين -->
-  <script type="module" src="./js/manage-users.js" defer></script>
+  <script type="module" src="manage-users.js" defer></script>
 
 </body>
 </html>
+
 
 
 
