--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -40,13 +40,14 @@
   <script type="module" src="./js/header.js" defer></script>
 
   <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
-  <script type="module" src="./js/auth-guard.js" defer></script>
+  <script type="module" src="../js/auth-guard.js" defer></script>
 
   <!-- منطق إدارة المستخدمين -->
   <script type="module" src="manage-users.js" defer></script>
 
 </body>
 </html>
+
 
 
 
