--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -7,9 +7,9 @@
   <title>إدارة المستخدمين - لوحة التحكم | CourseHub</title>
 
   <!-- CSS الأساسي -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/header.css">
-  <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
 
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
