--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -7,7 +7,9 @@
   <title>إدارة المستخدمين - لوحة التحكم | CourseHub</title>
 
   <!-- CSS الأساسي -->
-
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
 
@@ -31,11 +33,7 @@
 <script src="manage-users.js"></script>
 
   
-  <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
-  <script type="module" src="../js/main.js" defer></script>
 
-  <!-- منطق الهيدر (حالة المستخدم + زر الأدمن) -->
-  <script type="module" src="../js/header.js" defer></script>
 
   <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
   <script type="module" src="../js/auth-guard.js" defer></script>
@@ -45,6 +43,7 @@
 
 </body>
 </html>
+
 
 
 
