--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -33,6 +33,9 @@
 <script src="manage-users.js"></script>
 
   
+  <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
+  <script type="module" src="../js/main.js" defer></script>
+
 
 
   <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
@@ -43,6 +46,7 @@
 
 </body>
 </html>
+
 
 
 
