--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -40,7 +40,7 @@
   <script type="module" src="js/auth-guard.js" defer></script>
 
   <!-- منطق لوحة التحكم -->
-  <script type="module" src="js/dashboard.js" defer></script>
+  <script type="module" src="../js/dashboard.js" defer></script>
 
 </body>
 </html>
