--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -36,7 +36,8 @@
   <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
   <script type="module" src="../js/main.js" defer></script>
 
-
+  <!-- منطق الهيدر (حالة المستخدم + زر الأدمن) -->
+  <script type="module" src="../js/header.js" defer></script>
 
   <!-- حماية صفحة الأدمن (موحدة واحترافية) -->
   <script type="module" src="../js/auth-guard.js" defer></script>
@@ -46,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
