--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="admin/dashboard.css">
 </head>
 
 <body>
