--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="../dashboard.css">
+  <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
   <script type="module" src="../js/auth-guard.js" defer></script>
 
   <!-- منطق لوحة التحكم -->
-  <script type="module" src="js/dashboard.js" defer></script>
+  <script type="module" src="dashboard.js" defer></script>
 
 </body>
 </html>
