--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -7,9 +7,9 @@
   <title>لوحة التحكم - CourseHub</title>
 
   <!-- CSS الأساسي -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/header.css">
-  <link rel="stylesheet" href="/css/footer.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/header.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="dashboard.css">
 </head>
 
