Update files after GitHub edits

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/footer.css">
 
   <!-- CSS خاص بالأدمن -->
-  <link rel="stylesheet" href="/admin/dashboard.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
   <script type="module" src="/js/main.js"></script>
   <script type="module" src="/js/header.js"></script>
   <script type="module" src="/js/auth-guard.js"></script>
-  <script type="module" src="/admin/dashboard.js"></script>
+  <script type="module" src="js-admin/dashboard.js"></script>
 
 </body>
 </html>
