--- a/admin/manage-users.html
+++ b/admin/manage-users.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="css-admin/admin.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
   <!-- Footer (تحميل ديناميكي) -->
   <div id="footer-placeholder"></div>
 
-<script src="manage-users.js"></script>
+<script src="js-admin/manage-users.js"></script>
 
   
   <!-- JS الأساسي (تحميل الهيدر والفوتر + CSS العام) -->
@@ -43,7 +43,7 @@
   <script type="module" src="../js/auth-guard.js" defer></script>
 
   <!-- منطق إدارة المستخدمين -->
-  <script type="module" src="manage-users.js" defer></script>
+  <script type="module" src="js-admin/manage-users.js" defer></script>
 
 </body>
 </html>
