--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -2,35 +2,69 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <title>لوحة التحكم | CourseHub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>لوحة التحكم - CourseHub</title>
-
-  <!-- CSS العام -->
+  <!-- CSS الموقع العام -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/footer.css">
 
-  <!-- CSS خاص بالأدمن -->
-  <link rel="stylesheet" href="css-admin/admin.css">
+  <!-- CSS الأدمن -->
+  <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
 
-  <div id="header-placeholder"></div>
+<!-- ===== Header الموقع ===== -->
+<div id="header-placeholder"></div>
 
-  <main class="container">
-    <h2>لوحة التحكم</h2>
-    <div id="admin-dashboard-content"></div>
-  </main>
+<!-- ===== محتوى الأدمن ===== -->
+<main class="admin-wrapper">
 
-  <div id="footer-placeholder"></div>
+  <div class="admin-layout">
 
-  <!-- JS -->
-  <script type="module" src="/js/main.js"></script>
-  <script type="module" src="/js/header.js"></script>
-  <script type="module" src="/js/auth-guard.js"></script>
-  <script type="module" src="js-admin/dashboard.js"></script>
+    <!-- Sidebar -->
+    <aside class="admin-sidebar">
+      <div id="sidebar-placeholder"></div>
+    </aside>
+
+    <!-- Main -->
+    <section class="admin-main">
+
+      <!-- Topbar -->
+      <div id="topbar-placeholder"></div>
+
+      <!-- Content -->
+      <div class="admin-content">
+        <h1>لوحة التحكم</h1>
+
+        <div class="admin-cards">
+          <div class="card">👤 المستخدمون</div>
+          <div class="card">📚 الدورات</div>
+          <div class="card">🏆 الشهادات</div>
+          <div class="card">🧪 الاختبارات</div>
+        </div>
+      </div>
+
+    </section>
+
+  </div>
+
+</main>
+
+<!-- ===== Footer الموقع ===== -->
+<div id="footer-placeholder"></div>
+
+<!-- ===== JS الموقع ===== -->
+<script type="module" src="/js/main.js"></script>
+<script type="module" src="/js/header.js"></script>
+<script type="module" src="/js/footer.js"></script>
+
+<!-- ===== JS الأدمن ===== -->
+<script type="module" src="js/admin-guard.js"></script>
+<script type="module" src="js/admin-layout.js"></script>
+<script type="module" src="js/dashboard.js"></script>
 
 </body>
 </html>
